--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,13 @@
 version: '3.8'
 services:
+  nginx:
+    image: nginx
+    container_name: nginx_proxy
+    ports:
+      - 80:80
+      - 443:443
+    volumes:
+      - ./proxy-nginx.conf:/etc/nginx/nginx.conf  
 
   frontend-desktop:
     depends_on:
@@ -11,10 +19,8 @@ services:
         - VUE_APP_ENV_FILE=$PROFILE
     image: mamouros99/desktop
     container_name: desktop_c
-    ports:
-      - '8081:80'
     volumes:
-      - ./lh-nginx.conf:/etc/nginx/nginx.conf  
+      - ./frontend-nginx.conf:/etc/nginx/nginx.conf  
       - ./data/certs:/etc/certs
 
 
@@ -29,11 +35,8 @@ services:
         - VUE_APP_ENV_FILE=$PROFILE
     image: mamouros99/mobile
     container_name: mobile_c
-    ports:
-      - '8080:80'
-
     volumes:
-      - ./lh-nginx.conf:/etc/nginx/nginx.conf
+      - ./frontend-nginx.conf:/etc/nginx/nginx.conf
       - ./data/certs:/etc/certs
 
   spring-backend:
@@ -45,8 +48,6 @@ services:
     container_name: spring_c
     restart: on-failure
     env_file: ./.env
-    ports:
-      - $SPRING_LOCAL_PORT:$SPRING_DOCKER_PORT
     environment:
       SPRING_APPLICATION_JSON: '{
         "spring.datasource.url"  : "jdbc:mysql://mysqldb:$MYSQLDB_DOCKER_PORT/$MYSQLDB_DATABASE?allowPublicKeyRetrieval=true&useSSL=false",
@@ -75,10 +76,12 @@ services:
     healthcheck:
           test: mysql --user=root --password=$$MYSQL_ROOT_PASSWORD
           interval: 2s
-          timeout: 60s
-          retries: 30
+          timeout: 120s
+          retries: 60
     volumes:
       - db:/var/lib/mysql
+
+
     
 volumes:
   db:
