--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,8 +6,12 @@ services:
     ports:
       - 80:80
       - 443:443
+    depends_on:
+    - frontend-desktop
+    - frontend-mobile
     volumes:
-      - ./proxy-nginx.conf:/etc/nginx/nginx.conf  
+      - ./proxy-nginx.conf:/etc/nginx/nginx.conf
+      - ./data/certs:/etc/certs
 
   frontend-desktop:
     depends_on:
