--- a/proxy-nginx.conf
+++ b/proxy-nginx.conf
@@ -20,8 +20,11 @@ http {
                       '"$http_user_agent" "$http_x_forwarded_for"';
 
     server {
-        listen 80;
-        server_name	tecnicofazadiferenca.tecnico.ulisboa.pt www.tecnicofazadiferenca.tecnico.ulisboa.pt;
+        listen 443 ssl;
+        server_name	localhost;
+
+        ssl_certificate     /etc/certs/localhost.crt;
+        ssl_certificate_key /etc/certs/localhost.key;
 
         location / {
             proxy_pass "http://frontend-mobile:80/";
