--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 MYSQLDB_USER= #user
 MYSQLDB_ROOT_PASSWORD= #root_password
+MYSQLDB_PASSWORD= #user_password
 MYSQLDB_DATABASE= #database name ex: ist_db
 MYSQLDB_LOCAL_PORT=3307
 MYSQLDB_DOCKER_PORT=3306
