--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -56,7 +56,7 @@ services:
       SPRING_APPLICATION_JSON: '{
         "spring.datasource.url"  : "jdbc:mysql://mysqldb:$MYSQLDB_DOCKER_PORT/$MYSQLDB_DATABASE?allowPublicKeyRetrieval=true&useSSL=false",
         "spring.datasource.username" : "$MYSQLDB_USER",
-        "spring.datasource.password" : "$MYSQLDB_ROOT_PASSWORD",
+        "spring.datasource.password" : "$MYSQLDB_PASSWORD",
         "spring.jpa.hibernate.ddl-auto" : "update",
         "server.port" : $SPRING_DOCKER_PORT,
         "spring.datasource.driver-class-name" : "com.mysql.cj.jdbc.Driver",
@@ -74,6 +74,8 @@ services:
       - ./.env
     environment:
       - MYSQL_ROOT_PASSWORD=$MYSQLDB_ROOT_PASSWORD
+      - MYSQL_PASSWORD=$MYSQLDB_PASSWORD
+      - MYSQL_USER=$MYSQLDB_USER
       - MYSQL_DATABASE=$MYSQLDB_DATABASE
     ports:
       - $MYSQLDB_LOCAL_PORT:$MYSQLDB_DOCKER_PORT
