--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 MYSQLDB_USER=springuser
-MYSQLDB_ROOT_PASSWORD=n&9pSa%%F!z%!GTcYc$$s
-MYSQLDB_PASSWORD=ThePassword
+MYSQLDB_ROOT_PASSWORD=
+MYSQLDB_PASSWORD=
 MYSQLDB_DATABASE=ist_mysql
 MYSQLDB_LOCAL_PORT=3307
 MYSQLDB_DOCKER_PORT=3306
